--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,6 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  background-color: #FDFFB8;
- 
-}
-body{
+body {
   margin: 0;
   padding: 0;
+  background-color: #fff9f9;
+  font-family: "Poppins", sans-serif;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-
-
