--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  background-color: #FDFFB8;
+  background-color: #ffffff;
  
 }
 body{
